WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 116605
[Mac] Captions menu isn't internationalized, doesn't use rtl layout for rtl languages
https://bugs.webkit.org/show_bug.cgi?id=116605
Summary
[Mac] Captions menu isn't internationalized, doesn't use rtl layout for rtl l...
Antoine Quint
Reported
2013-05-22 03:00:32 PDT
When the user locale is set to hebrew, for instance, the text is laid out ltr and left-aligned. It should be laid out rtl and right-aligned.
Attachments
Patch
(6.66 KB, patch)
2013-05-22 03:09 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.66 KB, patch)
2013-05-22 08:28 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2013-05-22 03:00:45 PDT
<
rdar://problem/13772554
>
Antoine Quint
Comment 2
2013-05-22 03:09:02 PDT
Created
attachment 202515
[details]
Patch
Eric Carlson
Comment 3
2013-05-22 08:25:00 PDT
Comment on
attachment 202515
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=202515&action=review
> Source/WebCore/ChangeLog:32 > + Makr the checkmarks a ::before pseudo-class rather than a background-image such that
Nit: Makr -> Make
> Source/WebCore/ChangeLog:33 > + we may control is positioning using the internationlization-friendly "-webkit-margin-start"
Nit: is -> its
Antoine Quint
Comment 4
2013-05-22 08:28:15 PDT
Created
attachment 202536
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2013-05-22 09:10:41 PDT
The commit-queue encountered the following flaky tests while processing
attachment 202536
[details]
: http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame.html
bug 114208
(authors:
abarth@webkit.org
and
rniwa@webkit.org
) svg/batik/text/textFeatures.svg
bug 116326
(authors:
darin@apple.com
and
zimmermann@kde.org
) svg/batik/filters/feTile.svg
bug 114375
(authors:
krit@webkit.org
and
zimmermann@kde.org
) svg/animations/smil-leak-elements.svg
bug 114280
(authors:
fmalita@chromium.org
and
timothy_horton@apple.com
) svg/animations/smil-leak-dynamically-added-element-instances.svg
bug 114281
(authors:
fmalita@chromium.org
and
timothy_horton@apple.com
) fast/loader/javascript-url-in-object.html
bug 114210
(authors:
rniwa@webkit.org
and
sam@webkit.org
) platform/mac/editing/deleting/deletionUI-single-instance.html
bug 114181
(author:
rniwa@webkit.org
) compositing/overflow/overflow-compositing-descendant.html
bug 116485
(authors:
mihaip@chromium.org
,
rniwa@webkit.org
, and
simon.fraser@apple.com
) transitions/color-transition-rounding.html
bug 114182
(author:
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-svg-length.html
bug 114183
(author:
peter@chromium.org
) transitions/interrupt-zero-duration.html
bug 114184
(authors:
cmarrin@apple.com
,
rniwa@webkit.org
, and
simon.fraser@apple.com
) transitions/multiple-background-transitions.html
bug 114185
(author:
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-color.html
bug 114186
(author:
peter@chromium.org
) transitions/mismatched-shadow-transitions.html
bug 114188
(author:
simon.fraser@apple.com
) transitions/color-transition-all.html
bug 114189
(authors:
ossy@webkit.org
and
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-shadow.html
bug 114191
(author:
peter@chromium.org
) transitions/min-max-width-height-transitions.html
bug 114192
(author:
simon.fraser@apple.com
) transitions/cancel-transition.html
bug 114193
(authors:
ojan@chromium.org
,
rniwa@webkit.org
, and
simon.fraser@apple.com
) transitions/border-radius-transition.html
bug 114194
(author:
simon.fraser@apple.com
) transitions/flex-transitions.html
bug 114195
(author:
tony@chromium.org
) transitions/mixed-type.html
bug 114196
(author:
mikelawther@chromium.org
) transitions/color-transition-premultiplied.html
bug 114198
(author:
simon.fraser@apple.com
) transitions/mismatched-shadow-styles.html
bug 114199
(author:
simon.fraser@apple.com
) transitions/mask-transitions.html
bug 114200
(authors:
ojan@chromium.org
,
oliver@apple.com
, and
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-length.html
bug 114201
(author:
peter@chromium.org
) transitions/multiple-background-size-transitions.html
bug 114202
(authors:
mitz@webkit.org
and
simon.fraser@apple.com
) transitions/clip-transition.html
bug 114203
(authors:
dglazkov@chromium.org
,
krit@webkit.org
, and
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-transform.html
bug 114204
(author:
peter@chromium.org
) transitions/interrupted-accelerated-transition.html
bug 56242
(authors:
rniwa@webkit.org
,
simon.fraser@apple.com
, and
tonyg@chromium.org
) transitions/background-transitions.html
bug 114206
(author:
simon.fraser@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6
2013-05-22 09:11:32 PDT
Comment on
attachment 202536
[details]
Patch for landing Clearing flags on attachment: 202536 Committed
r150516
: <
http://trac.webkit.org/changeset/150516
>
WebKit Commit Bot
Comment 7
2013-05-22 09:11:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug